# game-of-life-parallel

./: .gitignore  CMakeLists.txt
include/: Board.h  CPPThreadBoard.h  CppThreadsBoard.h  OmpBoard.h  RajaBoard.h  SerialBoard.h  Timer.hpp
src/: Board.cpp  CMakeLists.txt  CPPThreadBoard.cpp  CppThreadsBoard.cpp  OmpBoard.cpp  RajaBoard.cpp  SerialBoard.cpp  main.cpp
